data/all_generated_tests/raw_wast_tests/br_InvalidorInconsistentControlFlowGraph_762.wast
;; 3. **Forward Branch with Operand Transfer Test**: Design a scenario with a `block` that consumes specific operands and place a `br` targeting the block. Check that the operands are correctly transferred to the operand stack after unwinding. This validates proper forwarding of operands during branch execution.

(assert_invalid
  (module
    (func $forward-branch-with-operand (result i32)
      (i32.const 42)
      (block (result i32) 
        (br 0)
        (i32.const 1)
      )
    )
  )
  "type mismatch"
)